# lshape-analyser

./: README.en.md  README.md  readme.md
C++/: readme.md
C++/Source_code/: CMakeLists.txt
C++/Source_code/include/: FNNModel.h  LShapeAnalyser.h  LShapeAnalyserFunction.h  LShapeAnalyser_multiple.h  LShapeAnalyser_single.h  OrbifoldTutteEmbedding.h  PosConstraints.h
C++/Source_code/src/: LShapeAnalyser.cpp  LShapeAnalyserFunction.cpp  LShapeAnalyser_multiple.cpp  LShapeAnalyser_single.cpp  OrbifoldTutteEmbedding.cpp  PosConstraints.cpp  main.cpp
C++/Source_code/ui/: LShapeAnalyser.ui  LShapeAnalyser_multiple.ui  LShapeAnalyser_single.ui
Dataset/: Average mesh example.ply  Converted grayscale image example  Converted mesh example  Converted point cloud example.ply  Original depth image  mesh after align example.ply
Dataset/dairy/: BCS_dairy.txt
Dataset/pig/: BCS_pig.txt
MATLAB/: readme.md
MATLAB/Source code/: Main.mlapp  Shape_analysis.mlapp  Shape_analysis_mul.mlapp  project.txt
MATLAB/Source code/func/: CutMesh.m  Flattener.m  PosConstraints.m  computeFlattening.m  compute_map_from_disk_embeddings.m  cotmatrix.m  disk_map.m  evaluate_score.m  flatten_disk.m  generate_avg_shape.m  map_disks.m  mean_value_laplacian.m  solve_line.m  solve_surface.m  visual_mapping.m
